# E3A

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  e3a_fix.cpp
src/: CMakeLists.txt  adjacency.cpp  adjacency.hpp  area.cpp  area.hpp  conversion.cpp  conversion.hpp  fix.cpp  fix.hpp  graph.cpp  graph.hpp  matrices.cpp  matrices.hpp  readmesh.cpp  readmesh.hpp  schnyder.cpp  schnyder.hpp
